# sub-billion-vla

./: .gitignore  README.md  requirements.txt
docs/: baselines.md  datasets.md
pretrain/: README.md  convert_vlab_to_lerobot.py  fix_pad.patch  pyproject.toml
src/: constants.py  data.py  download.py  eval.py  model.py  policy.py  train.py
